--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:500&display=swap');
+ @import url('https://fonts.googleapis.com/css?family=Montserrat:500&display=swap');
 
 * {
     font-family: 'Montserrat', sans-serif;
@@ -9,16 +9,18 @@
     min-height: 100vh;
     background: url('assets/jjjj.jpg');
     background-size: cover;
-    padding: 0 10%;
+    /* padding: 0 10%; */
 }
 
 .title {
-    font-size: 80px;
+    font-size: 50px;
+    font-family:'Montserrat', sans-serif;
     text-shadow: 0 4px 4px #000;
     color: mintcream;
     display: block;
     text-align: center;
     text-decoration: none;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .search_box {
