--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 
 .search_box {
     position: absolute;
-    top: 20%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
     /*background: #2f3640;*/
@@ -34,10 +34,12 @@
 }
 
 .search_btn{
+    margin-left: 10px;
     width: 90px;
     height: 60px;
     border: 3px white solid;
 }
+
 button{
     /*color: #e84118;*/
     /*float: right;*/
@@ -58,7 +60,7 @@ button{
 }
 .search_text {
     border: none;
-    background: none;
+    background: #ddd;
     outline: none;
     float: left;
     padding: 0;
@@ -66,7 +68,7 @@ button{
     font-size: 16px;
     transition: 0.4s;
     line-height: 40px;
-    width: 0px;
+    width: 650px;
     font-weight: bold;
     height: 60px;
     border-radius: 20px;
@@ -74,11 +76,12 @@ button{
 }
 .search_text::placeholder{
     color: white;
+    padding-left: 30px;
 }
-.search_box input:focus,.search_box:hover > form .search_text{
-    width: 240px;
-    background-color: #ddd;
-}
+/*.search_box input:focus,.search_box:hover > form .search_text{*/
+/*    width: 240px;*/
+/*    background-color: #ddd;*/
+/*}*/
 .search_box input::placeholder,.search_box input{
     color:#2f3640;
 }
