--- a/src/Pages/Recipe.css
+++ b/src/Pages/Recipe.css
@@ -1,14 +1,14 @@
 .Recipe{
-    width: 850px;
+    width: 65em;
     display: flex;
     padding: 20px;
-    margin: 120px auto;
+    margin: 150px auto;
     border-radius: 5px;
     background: rgba(0, 0, 0, .5) ;
 }
 
 .Recipe img{
-    /*width: 48%;*/
+    width: 300px;
     height: 250px;
     margin-bottom: 20px;
     border-radius: 5px;
